--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "start:prod": "NODE_ENV=production nodemon server.js",
     "debug": "ndb server.js",
     "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
@@ -34,6 +34,7 @@
     "nodemailer": "^6.9.1",
     "nodemailer-brevo-transport": "^2.0.1",
     "nodemailer-sendinblue-transport": "^2.0.1",
+    "nodemon": "^3.0.1",
     "parcel": "^2.9.3",
     "pug": "^3.0.2",
     "sharp": "^0.32.3",
